test/classes/errors/nilability-assign/assign-nonnil-owned-from-oknil-nil.good
assign-nonnil-owned-from-oknil-nil.chpl:8: error: Assigning non-nilable owned to nil
